--- a/WpfDemo/WpfDemo.csproj
+++ b/WpfDemo/WpfDemo.csproj
@@ -23,6 +23,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -56,6 +57,9 @@
   <ItemGroup>
     <Reference Include="ControlzEx, Version=3.0.2.4, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>packages\ControlzEx.3.0.2.4\lib\net45\ControlzEx.dll</HintPath>
+    </Reference>
+    <Reference Include="shortid, Version=2.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\OscGuiControl\packages\shortid.2.0.0\lib\net45\shortid.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
@@ -146,9 +150,13 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\OscGuiControl\OscGuiControl.csproj">
-      <Project>{3f17edbf-b4cc-44c7-abeb-a395659226bb}</Project>
-      <Name>OscGuiControl</Name>
+    <ProjectReference Include="..\..\OscTree\OscTree\OscTree.csproj">
+      <Project>{e0982b79-3e9d-44f0-a38a-00dff9181acd}</Project>
+      <Name>OscTree</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\OscGuiControl\OscGui.csproj">
+      <Project>{c204dca4-1efb-46d7-8921-c7931b88e8ed}</Project>
+      <Name>OscGui</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
