--- a/WpfDemo/packages.config
+++ b/WpfDemo/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="ControlzEx" version="3.0.2.4" targetFramework="net461" />
   <package id="Extended.Wpf.Toolkit" version="3.4.0" targetFramework="net461" />
+  <package id="shortid" version="2.0.0" targetFramework="net461" />
 </packages>
