--- a/OSCGui_Forms/OSCGui_Forms.csproj
+++ b/OSCGui_Forms/OSCGui_Forms.csproj
@@ -8,7 +8,7 @@
     <PackageId>OscGui_Forms</PackageId>
     <Description>A Grid based display module with integrated Osc messaging and related Gui Controls.</Description>
     <PackageProjectUrl>https://github.com/yvanvds/OSCGui</PackageProjectUrl>
-    <Version>1.0.14</Version>
+    <Version>1.0.15</Version>
   </PropertyGroup>
 
   <ItemGroup>
@@ -16,6 +16,11 @@
     <PackageReference Include="OscTree" Version="1.0.25" />
     <PackageReference Include="Xamarin.Forms" Version="3.1.0.697729" />
     <PackageReference Include="yGuiXamarin" Version="1.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\OscTree\OscTree\OscTree.csproj" />
+    <ProjectReference Include="..\..\yGui\yGuiStandard\yGui.csproj" />
   </ItemGroup>
 
 </Project>
