--- a/WpfDemo/packages.config
+++ b/WpfDemo/packages.config
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="ControlzEx" version="3.0.2.4" targetFramework="net461" />
-  <package id="Extended.Wpf.Toolkit" version="3.4.0" targetFramework="net461" />
-  <package id="OscTree" version="1.0.21" targetFramework="net461" />
+  <package id="Extended.Wpf.Toolkit" version="3.5.0" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net461" />
+  <package id="OscTree" version="1.0.26" targetFramework="net461" />
   <package id="shortid" version="2.0.0" targetFramework="net461" />
 </packages>
